<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.authtestdmac.MainActivity">

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/mode_test"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Test"/>
        <RadioButton
            android:id="@+id/mode_prod"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Prod"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_below="@id/rg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />


    <LinearLayout
     android:id="@+id/ll1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/tv1"
     android:orientation="vertical"
     >
        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="state"/>
         <Button
             android:id="@+id/activate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/ACTIVATE"
         />
         <Button
             android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/LOGIN"
             />
        <Button
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/INFO"
            />
        <Button
            android:id="@+id/token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TOKEN"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll2"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/result"
            android:text="@string/res_from_dmac"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        </LinearLayout>

</RelativeLayout>
